--- a/js_lesson_4/index.html
+++ b/js_lesson_4/index.html
@@ -39,8 +39,30 @@
             <h3>Перевірка паролю:</h3>
             <div id="user2-check-password"></div>
         </div>
-    </div>
 
+    </div>
+    <div class="user-info">
+        <h2>Добавлено користувачів</h2>
+        <div class="user-info-box">
+            <ul id="user_list"></ul>
+        </div>
+        <div class="user-info-box">
+            <p style="color: blue">Видалення користувачів:</p>
+            <p id="delete_user"></p>
+            <p id="delete_user2"></p>
+        </div>
+        <div class="user-info-box">
+            <p style="color: blue">Список користувачів після видалення</p>
+            <ul id="user_list2"></ul>
+        </div>
+    </div>
+    <div class="user-info">
+        <h2>Пошук користувача</h2>
+        <div class="user-info-box">
+            <p id="find_user"></p>
+            <p id="find_user2"></p>
+        </div>
+    </div>
     <script src="class.js"></script>
 </body>
 
